--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Per la mia Bimba </title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -306,11 +309,18 @@
         <div class="leaf leaf--3"></div>
       </div>
     </div>
-  </div>
-       <div class="text">
+
+    <div class="text-container">
+      <div class="text">
         Ti amo Bimba
       </div>
+      <div class="text-particle text-particle--1"></div>
+      <div class="text-particle text-particle--2"></div>
+      <div class="text-particle text-particle--3"></div>
+      <div class="text-particle text-particle--4"></div>
+      <div class="text-particle text-particle--5"></div>
     </div>
+  </div>
 </body>
 <!-- partial -->
   <script  src="./script.js"></script>
